z-index fix - overflowing admin bar;

--- a/assets/css/modula-cpt.css
+++ b/assets/css/modula-cpt.css
@@ -1055,8 +1055,8 @@ a.modula-tab-link {
 	display: flex;
 	align-items: center;
 	border-top: 1px solid #ecf6f9;
-  z-index: 99999;
-  position: relative;
+	z-index: 999;
+	position: relative;
 }
 .modula-helper-guidelines-container .onoffswitch {
   margin-top: 0;
